objects/Co_Branding_Patner__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CO_BRAND_Partner__c</fullName>
        <label>CO-BRAND Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEAL_TYPE__c</fullName>
        <label>DEAL TYPE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financier__c</fullName>
        <label>Financier</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPPORTUNITY_STAGE__c</fullName>
        <label>OPPORTUNITY STAGE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SELLING_ENTITY__c</fullName>
        <label>SELLING ENTITY</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Co-Branding Patner</label>
</CustomObject>